--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="preconnect" href="https://design.davidnet.net" crossorigin>
 	<link rel="dns-prefetch" href="https://design.davidnet.net">
+	<link rel="preconnect" href="https://auth.davidnet.net" crossorigin>
+	<link rel="dns-prefetch" href="https://auth.davidnet.net">
+	<link rel="preconnect" href="https://kanban-api.davidnet.net" crossorigin>
+	<link rel="dns-prefetch" href="https://kanban-api.davidnet.net">
+	<title>Kanban - Davidnet</title>
+	<link rel="icon" type="image/svg+xml" href="https://design.davidnet.net/images/logos/kanban.svg">
+	<link rel="alternate icon" href="https://design.davidnet.net/images/logos/kanban.png">
 
 	<link rel="preload"
 		href="https://design.davidnet.net/fonts/Material_Symbols_Outlined/kJF1BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzaxHMPdY43zj-jCxv3fzvRNU22ZXGJpEpjC_1v-p_4MrImHCIJIZrDCvHOej.woff2"
