--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,7 @@
 	<title>Kanban - Davidnet</title>
 	<link rel="icon" type="image/svg+xml" href="https://design.davidnet.net/images/logos/kanban.svg">
 	<link rel="alternate icon" href="https://design.davidnet.net/images/logos/kanban.png">
+	<meta name="description" content="Improve your planning with Davidnet's kanban board app with calendar." />
 
 	<link rel="preload"
 		href="https://design.davidnet.net/fonts/Material_Symbols_Outlined/kJF1BvYX7BgnkSrUwT8OhrdQw4oELdPIeeII9v6oDMzByHX9rA6RzaxHMPdY43zj-jCxv3fzvRNU22ZXGJpEpjC_1v-p_4MrImHCIJIZrDCvHOej.woff2"
